[package]
name = "css-linter"
version = "1.8.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.217", features = ["derive"] }
swc_common = "8.0.0"
swc_ecma_ast = "8.0.0"
swc_ecma_parser = { version = "10.0.0", features = ["typescript"] }
swc_ecma_visit = "8.0.0"
anyhow = "1.0.97"
